--- a/index.html
+++ b/index.html
@@ -3,11 +3,43 @@
   <head>
     <title>Vanilla Challenge</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
-    <h1>hello!</h1>
-    <script src="src/index.js"></script>
+    <!-- 시간 -->
+    <h2 id="clock">00:00:00</h2>
+
+    <form class="hidden" id="login-form">
+      <input required type="text" placeholder="What is your name?" />
+      <input type="submit" value="Log in" />
+    </form>
+
+    <h1 class="hidden" id="greeting"></h1>
+
+    <!-- TO DO LIST -->
+    <form id="todo-form">
+      <input type="text" placeholder="Write a To Do" required />
+    </form>
+    <ul id="todo-list"></ul>
+
+    <!-- 명언 -->
+    <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
+
+    <!-- 위치, 날씨 -->
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
+
+    <script src="java/bg.js"></script>
+    <script src="java/quotes.js"></script>
+    <script src="java/greetings.js"></script>
+    <script src="java/clock.js"></script>
+    <script src="java/todo.js"></script>
+    <script src="java/weather.js"></script>
   </body>
 </html>
